# LiA

./: .gitignore  CHANGELOG.md  Cargo.toml  LiaAPI.jl  PKGBUILD  README.md  TODO.md  docs.md
.github/workflows/: release.yml
misc/: logo.ai
src/: ast.rs  at_expression.rs  bracket_depth.rs  cli.rs  codegen.rs  compiler.rs  docs_and_tooling_builder.rs  document.rs  feature_matrix.rs  hierachy_construction.rs  hierarchy.rs  hierarchy_construction.rs  lia.yacc  lib.rs  main.rs  parse.rs  token.rs  tokeniser.rs  tokenize.rs  typed_value.rs  utils.rs  version.rs
src/grammar/: binary_additive_expression.rs  binary_multiplicative_expression.rs  binary_pow_expression.rs  expression.rs  imported_value.rs  literal.rs  mod.rs  text.rs  text_node_pair.rs  unary_additive_expression.rs  vector.rs
src/lang_modules/: mod.rs
src/parser_modules/: bold_italic.rs  comments.rs  enumerated_list.rs  environments.rs  equation.rs  imports.rs  inline_code.rs  list.rs  markdown_style_bold_italic.rs  markdown_style_enumerated_list.rs  markdown_style_list.rs  markdown_style_section.rs  mod.rs  section.rs  tex_command.rs  variables.rs
src/parser_modules/inline_julia/: executor.rs  mod.rs
src/parser_modules/variables/: ast.rs  at_expression.rs  mod.rs  typed_value.rs  var_definition.rs
tests/: equations.lia  equations_out.tex  functions.lia  functions_out.tex  general.lia  general_out.tex  integration_test.rs  mdonly.lia  random.lia  readme_example.lia  readme_example_out.tex  regular_tex.lia  regular_tex_out.tex  test.lia  test.tex  test_out.tex
tooling/vscode/lia-helper/: CHANGELOG.md  (+4 more)
(+7 files in other folders)
